Add Bootstrap 5.0.0-alpha1

--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
     <head>
         <meta charset="utf-8" />
         <title>Yew • Address Book</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css"/ >
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css" />
+        <link rel="stylesheet" href="./lib/bootstrap-5.0.0-alpha1-dist/css/bootstrap.min.css" />
     </head>
-    <body>
+    <body class="d-flex flex-column h-100">
         <script src="/app.js"></script>
     </body>
 </html>
